--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,50 +1,70 @@
 ---
+// IMPORTS
+// fonts
+import "@fontsource-variable/work-sans";
+
+// components
+import BackgroundImage from "../assets/background/BackgroundImage.astro";
+
 interface Props {
-	title: string;
+  title: string;
+  src?: string;
 }
 
-const { title } = Astro.props;
+const { title, src = "/images/bg-tmdb.webp" } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
-	</head>
-	<body>
-		<slot />
-	</body>
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="description" content="Astro description" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="generator" content={Astro.generator} />
+    <title>{title}</title>
+  </head>
+  <body class="body">
+    <BackgroundImage src={src} />
+    <slot />
+  </body>
 </html>
+
 <style is:global>
-	:root {
-		--accent: 136, 58, 234;
-		--accent-light: 224, 204, 250;
-		--accent-dark: 49, 10, 101;
-		--accent-gradient: linear-gradient(
-			45deg,
-			rgb(var(--accent)),
-			rgb(var(--accent-light)) 30%,
-			white 60%
-		);
-	}
-	html {
-		font-family: system-ui, sans-serif;
-		background: #13151a;
-	}
-	code {
-		font-family:
-			Menlo,
-			Monaco,
-			Lucida Console,
-			Liberation Mono,
-			DejaVu Sans Mono,
-			Bitstream Vera Sans Mono,
-			Courier New,
-			monospace;
-	}
+  :root {
+    --font_workSans: "Work Sans Variable", sans-serif;
+    --color_primary: #03b4ba;
+    --color_letters: #ebfffc;
+    --color_paragraph: #9ca3af;
+    --color_line: #9ca3af60;
+    --color_bg: #000e16;
+    --color_bg_nav: #03b4ba90;
+    --color_bg_card: #03b4ba20;
+    --gradient_tmdb: linear-gradient(to right, #8acda4, #41bfc6);
+  }
+
+  * {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    box-sizing: border-box;
+    color: var(--color_letters);
+    background-color: transparent;
+    font-family: var(--font_workSans);
+  }
+
+  a {
+    text-decoration: none;
+  }
+
+  .body {
+    position: relative;
+  }
+
+  html {
+    scrollbar-width: thin;
+    scroll-behavior: smooth;
+    scrollbar-color: var(--color_primary) var(--color_bg);
+    background: var(--color_bg);
+  }
 </style>
