Habilitando el buscador de películas

--- a/src/components/header/Header.astro
+++ b/src/components/header/Header.astro
@@ -2,6 +2,7 @@
 import Logo from "../ui/Logo.astro";
 import { MenusInteraction } from "./OptionMenus";
 import SearchMovie from "./SearchMovie.astro";
+// import { SearchMovie } from "./SearchMovie";
 import Nav from "./Nav.astro";
 ---
 
