--- a/src/components/header/Nav.astro
+++ b/src/components/header/Nav.astro
@@ -8,16 +8,16 @@ import Series from "../../assets/icons/Series.astro";
 
 <nav class="nav-container">
   <ul class="ul-list">
-    <Li content="inicio">
+    <Li content="inicio" href="/">
       <Home slot={"icon-literal"} class:list={"icon-literal"} />
     </Li>
     <Li content="géneros" option="btn">
       <Gender slot={"icon-literal"} class:list={"icon-literal"} /></Li
     >
-    <Li content="películas">
+    <Li content="películas" href="#">
       <Movies slot={"icon-literal"} class:list={"icon-literal"} />
     </Li>
-    <Li content="series">
+    <Li content="series" href="#">
       <Series slot={"icon-literal"} class:list={"icon-literal"} />
     </Li>
   </ul>
