--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -44,7 +44,8 @@ const { title, src = "/images/bg-tmdb.webp" } = Astro.props;
 
     --breackpoint-tablet: 768px;
 
-    --topp: -50%;
+    --topp: -80%;
+    --bottom: -100%;
   }
 
   * {
